Fix button styles for consistency in ventas.html

--- a/ventas.html
+++ b/ventas.html
@@ -11,8 +11,8 @@
     <h1>
       🧾 Ventas
       <span class="h-actions">
-        <a id="btnAdd" class="btn-link" href="#" target="_blank">➕ Agregar stock</a>
-        <button class="btn-ghost" onclick="cargar()">🔄 Actualizar</button>
+        <a id="btnAdd" class="btn" href="inventario.html" target="_blank">➕ Agregar stock</a>
+        <button class="btn" onclick="cargar()">🔄</button>
       </span>
     </h1>
 
