--- a/ventas.html
+++ b/ventas.html
@@ -11,9 +11,9 @@
     <h1>
       🧾 Registrar Venta
       <span class="h-actions">
-        <a id="btnAdd" class="btn" href="index.html" target="_blank">🏠 Home</a>
+        <a id="btnHome" class="btn" href="index.html" target="_blank">🏠 Home</a>
         <a id="btnAdd" class="btn" href="inventario.html" target="_blank">➕ Agregar stock</a>
-        <button class="btn" onclick="cargar()">🔄</button>
+        <a id="btnRefresh" class="btn" onclick="cargar()">🔄 Actualizar</a>
       </span>
     </h1>
 
