--- a/ventas.html
+++ b/ventas.html
@@ -20,9 +20,8 @@
     <div class="card">
       <!-- Controles superiores -->
       <div class="controls">
-        <span style="flex:1"></span>
-        <label>Cliente: <input id="cliente" placeholder="Nombre del cliente" style="min-width:180px" /></label>
-        <label>Fecha: <input id="fecha" type="date" /></label>
+        <label>Cliente: <input id="cliente" placeholder="Nombre del cliente" style="min-width:240px" /></label>
+        <label>Fecha: <input id="fecha" type="text" readonly /></label>
         <label>Desc %: <input id="descPct" type="number" step="0.01" value="0" style="width:90px" /></label>
         <label>Imp %: <input id="impPct" type="number" step="0.01" value="0" style="width:90px" /></label>
         <label>Pago:
@@ -35,7 +34,8 @@
 
       <!-- Tabla -->
       <div style="overflow:auto; border:1px solid var(--border); border-radius:12px">
-        <input id="q" placeholder="Buscar por SKU o nombre" oninput="render()" style="min-width:240px" />
+        <span style="flex:1"></span>
+        <input id="q" placeholder="Buscar por SKU o nombre" oninput="render()" style="min-width:370px" />
         <table id="tabla">
           <thead>
             <tr>
