--- a/ventas.html
+++ b/ventas.html
@@ -21,15 +21,15 @@
       <!-- Controles superiores -->
       <div class="controls">
         <label>Cliente: <input id="cliente" placeholder="Nombre del cliente" style="min-width:240px" /></label>
-        <label>Fecha: <input id="fecha" type="text" readonly /></label>
-        <label>Desc %: <input id="descPct" type="number" step="0.01" value="0" style="width:90px" /></label>
-        <label>Imp %: <input id="impPct" type="number" step="0.01" value="0" style="width:90px" /></label>
+        <label>Fecha: <input id="fecha" type="text" readonly style="width:190px"/></label>
+        <label>Desc %: <input id="descPct" type="number" step="0.01" value="0" style="width:80px" /></label>
+        <label>Imp %: <input id="impPct" type="number" step="0.01" value="0" style="width:80px" /></label>
         <label>Pago:
           <select id="pago">
             <option>Efectivo</option><option>Tarjeta</option><option>Transferencia</option><option>Otros</option>
           </select>
         </label>
-        <label>Nota: <input id="nota" placeholder="Observaciones (opcional)" style="min-width:220px" /></label>
+        <label>Nota: <input id="nota" placeholder="Observaciones (opcional)" style="min-width:500px" /></label>
       </div>
 
       <!-- Tabla -->
