--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>Sistema Jhona</h1>
-      <p>Selecciona una opción:</p>
-      <a class="btn" href="inventario.html">Inventario</a>
-      <a class="btn" href="ventas.html">Ventas</a>
+    <div class="wrap">
+      <div class="card">
+        <span class="center">
+          <h1>Sistema Jhona</h1>
+          <p>Selecciona una opción:</p>
+          <a class="btn" href="inventario.html">Inventario</a>
+          <a class="btn" href="ventas.html">Registrar Venta</a>
+        </span>
+      </div>
     </div>
   </body>
 </html>
